# Ralpha

./: .gitignore  Cargo.toml  README.md  docker-compose.yaml
docker/main/: Dockerfile
examples/: bf-socketio.rs  btreemap.rs  file-rotate.rs  flexi_logger.rs  mac_address.rs  serde.rs
src/: api_client.rs  datamodels.rs  feedhandler.rs  main.rs
src/api_client/: backtest.rs  execution_client.rs
src/api_client/backtest/: backtest_client.rs
src/constants/: constants.rs
src/datamodels/: enums.rs  execution.rs  marketdata.rs  order.rs  position.rs
src/feedhandler/: bitflyer.rs  textwriter.rs  ticklogger.rs
src/feedhandler/bitflyer/: bitflyer_socketio.rs  datamodel.rs
src/strategy/: strategy.rs
