[package]
name = "ralpha"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1.4.1", features = [
    "v1",
    "v3",
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
] }
flexi_logger = { version = "0.25", features = [
    "async",
    "specfile",
    "compress",
] }
file-rotate = "0.7.5"
log = "0.4"
ordered-float = { version = "3.0", features = [
    "serde",
], default-features = false }
rust_socketio = "0.4.3"
serde = "1.0.171"
serde_json = "1.0.82"
time = { version = "0.3.11", features = ["serde", "serde-well-known"] }
chrono = { version = "0.4.19", features = ["serde"] }
tungstenite = "0.15.0"
tokio = { version = "1", features = ["full"] }
url = "2.2.2"
mac_address = "1.0.3"
md5 = "0.7.0"
once_cell = "1.8.0"
# rxrust = "1.0.0-beta.0"
# another-rxrust = "0.0.45"
strum = "0.25"
strum_macros = "0.25"
